add emqtt support

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
     "lodash": "^4.17.11",
+    "mqtt": "^3.0.0",
+    "mysql": "^2.17.1",
     "phone": "^2.3.14",
     "randomstring": "^1.1.5"
   },
