--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mqtt": "^3.0.0",
     "mysql": "^2.17.1",
     "phone": "^2.3.14",
-    "randomstring": "^1.1.5"
+    "randomstring": "^1.1.5",
+    "twilio": "^3.31.1"
   },
   "devDependencies": {},
   "autoload": {
